# dotm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  justfile
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-16-staging-directory-design.md  2026-02-16-staging-directory-plan.md
src/: adopt.rs  config.rs  deployer.rs  diff.rs  git.rs  hash.rs  hooks.rs  lib.rs  list.rs  loader.rs  main.rs  metadata.rs  orchestrator.rs  resolver.rs  scanner.rs  state.rs  status.rs  template.rs  vars.rs
tests/: add.rs  cli.rs  config_parsing.rs  copy_drift.rs  deployer.rs  e2e.rs  hooks.rs  list.rs  loader.rs  orchestrator.rs  orphan.rs  path_expansion.rs  resolver.rs  scanner.rs  state.rs  system_packages.rs  template.rs  vars.rs
tests/fixtures/basic/: dotm.toml
tests/fixtures/basic/hosts/: testhost.toml
tests/fixtures/basic/roles/: desktop.toml  dev.toml
tests/fixtures/overrides/: dotm.toml
tests/fixtures/overrides/.staged/.config/: app.conf  theme.conf
tests/fixtures/overrides/hosts/: myhost.toml
tests/fixtures/overrides/roles/: desktop.toml
