[package]
name = "dotm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Dotfile manager with composable roles, templates, and host-specific overrides"
license = "AGPL-3.0-only"
authors = ["Anten Skrabec <cebarks@gmail.com>"]
readme = "README.md"
repository = "https://github.com/cebarks/dotm"
keywords = ["dotfiles", "configuration", "symlink", "template", "stow"]
categories = ["command-line-utilities", "config"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
hostname = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
crossterm = "0.28"
gix = { version = "0.76", default-features = true, features = ["revision"] }
sha2 = "0.10"
similar = "2"
toml = "1"

[dev-dependencies]
tempfile = "3"
